feat: continue with registration
