# swagger.json
@@ -1,237 +1,230 @@
 {
-    "openapi":"3.0.0",
-    "info":{
-        "title":"API Pixel",
-        "description":"API Pixel",
-        "contact":{
-            "email":"mvleite0908@gmail.com"
-        },
-        "version":"1.0.0"
+  "openapi": "3.0.0",
+  "info": {
+    "title": "API Pixel",
+    "description": "API Pixel",
+    "contact": {
+      "email": "mvleite0908@gmail.com"
     },
-    "servers": [
-        {
-            "url":"http://localhost:3000/api",
-            "description":"dev"
-        }
-    ],
-    "paths":{
-      "/auth":{
-        "get":{
-            "summary":"Resgatar token",
-            "tags": ["auth"],
-            "responses":{
-        
-                "200":{
-                    "description":  "Authorization success",
-                    "content":{
-                        "application/json":{
-                            "schema":{
-                                "type": "string"
-                            }
-                        }
-                    }
-    
-                },
-                "500":{
-                    "description":  "Internal error"
+    "version": "1.0.0"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:3000/api",
+      "description": "dev"
+    }
+  ],
+  "paths": {
+    "/auth": {
+      "get": {
+        "summary": "Resgatar token",
+        "tags": ["auth"],
+        "responses": {
+          "200": {
+            "description": "Authorization success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
                 }
+              }
             }
+          },
+          "500": {
+            "description": "Internal error"
+          }
         }
-        
-      },
-      "/user":{
-        "get":{
-            "summary":"Listar usuarios cadastrados",
-            "tags": ["user"]
-        }
-      },
-      "/user/create":{
-        "post":{
-            "summary":"Criar usuario",
-            "tags": ["user"],
-            "security":[
-                {
-                    "bearerAuth":[]
-                } 
-            ],
-            "requestBody":{
-                "content":{
-                    "application/json":{
-                        "schema": {
-                            "$ref":"#/components/schemas/User"
-                        },
-                        "examples":{
-                            "user":{
-                                "value":{
-                                    "name": "Marcus",
-                                    "email": "mvleite0908@gmail.com",
-                                    "cpf": "52245472888",
-                                    "cell":"11958755705",
-                                    "birthDate":"2001-07-09",
-                                    "addressInfo":{
-                                        "zipcode": "05717200",
-                                        "street": "rua almaden",
-                                        "number": "130",
-                                        "district": "vila andrade",
-                                        "city": "São Paulo",
-                                        "estate": "sp",
-                                        "complement": "edf macapa. 136"
-                                    },
-                                    "paymentInfo":{
-                                        "cards":[
-                                            {
-                                                "cardName":"Marcus V Leite",
-                                                "cardNumber":"123123123123",
-                                                "expirationDate":"05/28"
-                                            }
-                                        ]
-                                    },
-                                    "receiveInfo":{
-                                        "nickname":"pix nubank",
-                                        "pixKey":"asdf@sdf.com"
-                                    }
-                                }
-                                
-                            }
-                        }
-                    }
-                }
-            },
-            "responses":{
-                "401":{
-                    "description": "Unauthorized"
-                },
-                "422":{
-                    "description":  "User already exists"
-                },
-                "201":{
-                    "description":  "User created",
-                    "content":{
-                        "application/json":{
-                            "schema":{
-                                "type": "object",
-                                "$ref": "#/components/schemas/User"
-                            }
-                        }
-                    }
-                },
-                "500":{
-                    "description":  "Internal error"
-                }
-            }
-        }
-      }  
+      }
     },
-    "components":{
-        "schemas":{
-            "User":{
-                "type": "object",
-                "properties":{
-                    "name":{
-                        "type":"string"
+    "/user": {
+      "get": {
+        "summary": "Listar usuarios cadastrados",
+        "tags": ["user"]
+      }
+    },
+    "/user/create": {
+      "post": {
+        "summary": "Criar usuario",
+        "tags": ["user"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              },
+              "examples": {
+                "user": {
+                  "value": {
+                    "name": "Marcus",
+                    "email": "mvleite0908@gmail.com",
+                    "cpf": "52245472888",
+                    "cell": "11958755705",
+                    "birthDate": "2001-07-09",
+                    "addressInfo": {
+                      "zipcode": "05717200",
+                      "street": "rua almaden",
+                      "number": "130",
+                      "district": "vila andrade",
+                      "city": "São Paulo",
+                      "state": "sp",
+                      "complement": "edf macapa. 136"
                     },
-                    "email": {
-                        "type":"string"
-                    },
-                    "cell":{
-                        "type":"string"
-                    },
-                    "birthDate":{
-                        "type":"string"
-                    },
-                    "saldo":{
-                        "type":"number"
-                    },
-                    "paymentInfo":{
-                        "type":"object",
-                        "properties":{
-                            "cards":{
-                                "type":"array",
-                                "items":{
-                                    "type":"object",
-                                    "properties":{
-                                        "cardNumber":{
-                                            "type":"string"
-                                        },
-                                        "cardName":{
-                                            "type":"string"
-                                        },
-                                        "expirationDate":{
-                                            "type":"string"
-                                        }
-                                    }
-                                }
-                            }
+                    "paymentInfo": {
+                      "cards": [
+                        {
+                          "cardName": "Marcus V Leite",
+                          "cardNumber": "123123123123",
+                          "expirationDate": "05/28"
                         }
+                      ]
                     },
-
-                    "receiveInfo":{
-                        "type":"object",
-                        "properties":{
-                            "nickname":{
-                                "type": "string"
-                            },
-                            "pixKey":{
-                                "type":"string",
-                                "required": false
-                            },
-                            "bankInfo":{
-                                "type":"object",
-                                "required": false,
-                                "properties":{
-                                    "bankName":{
-                                        "type":"string"
-                                    },
-                                    "agency":{
-                                        "type":"string"
-                                    },
-                                    "account":{
-                                        "type":"string"
-                                    }
-                                }
-                            }
-                        }
-                    },
-
-                    "addressInfo":{
-                        "type":"object",
-                        "properties":{
-                            "zipcode": {
-                                "type":"string"
-                            },
-                            "street": {
-                                "type":"string"
-                            },
-                            "number": {
-                                "type":"string"
-                            },
-                            "district": {
-                                "type":"string"
-                            },
-                            "city": {
-                                "type":"string"
-                            },
-                            "estate": {
-                                "type":"string"
-                            },
-                            "complement": {
-                                "type":"string",
-                                "required":false
-                            }
-
-                        }
+                    "receiveInfo": {
+                      "nickname": "pix nubank",
+                      "pixKey": "asdf@sdf.com"
                     }
-                    
-
+                  }
                 }
-            }
-        },
-        "securitySchemes": {
-            "bearerAuth":{
-                "type":"http",
-                "scheme": "bearer",
-                "bearerFormat":"JWT"
+              }
             }
           }
+        },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "422": {
+            "description": "User already exists"
+          },
+          "201": {
+            "description": "User created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal error"
+          }
+        }
+      }
     }
+  },
+  "components": {
+    "schemas": {
+      "User": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "cell": {
+            "type": "string"
+          },
+          "birthDate": {
+            "type": "string"
+          },
+          "saldo": {
+            "type": "number"
+          },
+          "paymentInfo": {
+            "type": "object",
+            "properties": {
+              "cards": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "cardNumber": {
+                      "type": "string"
+                    },
+                    "cardName": {
+                      "type": "string"
+                    },
+                    "expirationDate": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+
+          "receiveInfo": {
+            "type": "object",
+            "properties": {
+              "nickname": {
+                "type": "string"
+              },
+              "pixKey": {
+                "type": "string",
+                "required": false
+              },
+              "bankInfo": {
+                "type": "object",
+                "required": false,
+                "properties": {
+                  "bankName": {
+                    "type": "string"
+                  },
+                  "agency": {
+                    "type": "string"
+                  },
+                  "account": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          },
+
+          "addressInfo": {
+            "type": "object",
+            "properties": {
+              "zipcode": {
+                "type": "string"
+              },
+              "street": {
+                "type": "string"
+              },
+              "number": {
+                "type": "string"
+              },
+              "district": {
+                "type": "string"
+              },
+              "city": {
+                "type": "string"
+              },
+              "state": {
+                "type": "string"
+              },
+              "complement": {
+                "type": "string",
+                "required": false
+              }
+            }
+          }
+        }
+      }
+    },
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  }
 }
